# ayon-openassetio-manager-plugin

./: .gitignore  .gitmodules  README.md  create_env.ps1  generate_traits.ps1  pyproject.toml  traits.yml
AyonOpenAssetIOManager/: AyonOpenAssetIOManagerInterface.py  __init__.py  ayon.py
AyonOpenAssetIOManager/ayon_traits/: geo.py
ayon-traits/: README.md
ayon-traits/Ayon/traits/: __init__.py  core.py  geo.py  raster.py  time.py
ayon_openassetio_manager/: __init__.py
ayon_openassetio_manager/plugin/: AyonOpenAssetIOManagerInterface.py  ayon.py
ayon_openassetio_manager/plugin/ayon_traits/: core.py  meta.py  scene.py
plugin/ayon_openassetio_manager/ayon_traits/: sound.py
stubs/AyonOpenAssetIOManager/ayon_traits/: __init__.pyi
tests/: conftest.py  test_manager.py  utils.py
tools/: manage.ps1
