[project]
name = "AYON OpenAssetIO Manager Plugin"
version = "0.1.3"
requires-python = ">=3.9.1"
# this is now using unlocked version until everything stabilizes
dependencies = [
    "requests",
    "openassetio",
    "openassetio-mediacreation",
]
authors = [
    { name="AYON Team", email = "info@ynput.io" }
]
description = "AYON Manager Plugin for OpenAssetIO hosts."
keywords = ["AYON", "OpenAssetIO", "asset", "automation", "tracking", "asset management"]
readme = "README.md"
homepage = "https://github.com/ynput/ayon-openassetio-manager-plugin"
license = {file = "LICENSE", content-type = "text/plain"}

[project.urls]
repository = "https://github.com/ynput/ayon-openassetio-manager-plugin"

[project.entry-points."openassetio.manager_plugin"]
plugin_package_or_module = "AyonOpenAssetIOManager"

[tool.poetry]
name = "ayon-openassetio-manager-plugin"
version = "0.1.3"
description = "AYON Manager Plugin for OpenAssetIO hosts."
authors = ["AYON Team <info@ynput.io>"]
license = "Apache-2.0"
homepage = "https://github.com/ynput/ayon-openassetio-manager-plugin"
documentation = "https://ayon.ynput.io/"
repository = "https://github.com/ynput/ayon-openassetio-manager-plugin"
readme = "README.md"
keywords = ["AYON", "OpenAssetIO", "asset", "automation", "tracking", "asset management"]
packages = [
    {include = "plugin/**/*"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
]

[tool.poetry.dependencies]
python = ">=3.9.1"
requests = "*"
openassetio= "*"
openassetio-mediacreation = "*"

[tool.poetry.group.dev.dependencies]
openassetio-traitgen = "*"
flake8 = "*"
mypy = "*"
isort = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-print = "*"

[tool.poetry.plugins] # Optional super table
[tool.poetry.plugins."openassetio.manager_plugin"]
plugin_package_or_module = "AyonOpenAssetIOManager"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ynput/ayon-openassetio-manager-plugin/issues"
"Discussions" = "https://community.ynput.io/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[manager]
identifier = "io.ynput.ayon.openassetio.manager"
